# task-manager

./: .gitignore  README.md  index.html  package-lock.json  package.json  roadmap.md  vite.config.ts
.github/workflows/: main.yml  prerelease.yml
src/: algorithm.ts  debug.js  dopamenu.html  eisenhower.html  eisenhower.ts  eisentimeramine.css  feedback.ts  help.css  help.html  help.js  help.ts  http.ts  index.js  main.ts  notifications.ts  planner.css  planner.html  planner.ts  pomodoro.html  pomodoro.ts  reminders.ts  settings.css  settings.html  settings.ts  setup.js  storage.ts  styles.css  task.ts  tasklist.ts  taskmanager.ts  taskplan.css  taskplan.ts  tasks.css  tasks.html  thingsToKnow.txt  utils.ts
src-tauri/: .gitignore  Cargo.toml  prerelease.conf.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: algorithm.rs  histTests.txt  history.rs  http.rs  lib.rs  main.rs  storage.rs  task.rs  testutils.rs  utils.rs
src-tauri/src/tests/: history_tests.rs  mod.rs  storage_tests.rs  task_tests.rs
src/assets/: show-Hide.ai
src/styles/: eisentimeramine.css  faithful.css  fonts.css  help.css  planner.css  reminders.css  settings.css  styles.css  taskplan.css  tasks.css
src/styles/mobile/: ios.css
src/styles/themes/: barbie.css  blueberry.css  bubblegum.css  cherry.css  danishpastel.css  dark.css  dirt.css  gray.css  lemon.css  light.css  lilac.css  macalester.css  matcha.css  olaf.css  strawberry.css  tangerine.css  umn.css  vampire.css
src/tabs/: debug.html  dopamenu.html  eisenhower.html  help.html  planner.html  pomodoro.html  reminders.html  settings.html  taskplan.html  tasks.html  tinkering.html
src/tests/: help.test.ts  misc.test.ts  mocks.ts  planner.test.ts  settings.test.ts  task.test.ts  taskplan.test.ts  testutils.js  testutils.ts
src/themes/: barbie.css  blueberry.css  cherry.css  danishpastel.css  dark.css  gray.css  lemon.css  lilac.css  matcha.css  strawberry.css  tangerine.css  umn.css  vampire.css
