[package]
name = "task-manager"
version = "0.4.0-alpha.1"
description = "Task Manager"
authors = ["Phil Reitz-Jones", "Stephanie Miles", "Kaliana Andriamananjara"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.0-beta.9"
tauri-plugin-notification = "2.0.0-beta.7"
tauri-plugin-shell = "2.0.0-beta.7"
tauri-plugin-store = "2.0.0-beta.8"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-http = "2.0.0-beta.11"
tauri-plugin-sql = { version = "2.0.0-beta.8", features = ["sqlite"] }
sqlx = { version = "0.7", features = ["runtime-async-std"] }
tokio = { version = "1.38.0", features = ["macros"] }
tauri-plugin-os = "2.0.0-beta.8"
uuid = { version = "1.10.0", features = ["std", "v4"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-beta.9"

[lib]
name = "task_manager"
crate-type = ["staticlib", "cdylib", "rlib"]
